# AutoScript

./: CMakeLists.txt  architecture.md  progress.md  requirements-paddleocr.txt
app/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
automation/: DeviceController.cpp  DeviceController.h  ScreenCapture.cpp  ScreenCapture.h
config/: AdbConfig.h
core/: FlowStep.h  StepFlowState.cpp  StepFlowState.h  TaskBase.cpp  TaskBase.h  TaskManager.cpp  TaskManager.h  TaskState.h
core/worldmap/: WorldMapRuntimeContext.h  WorldMapTransform.cpp  WorldMapTransform.h  WorldMapTypes.h  WorldZoneCatalog.cpp  WorldZoneCatalog.h
docs/: world-map-jump-state-machine.md  world-map-zone-design.md
resources/styles/: main.qss
resources/world_map/: zones.json
scripts/: paddle_ocr_service.py
tasks/: ErosionLevelingTask.cpp  ErosionLevelingTask.h  ShopTask.cpp  ShopTask.h  TaskRegistry.cpp  TaskRegistry.h
tasks/states/: StAttackMenuToWorldOcean.cpp  StAttackMenuToWorldOcean.h  StMainMenuToAttackMenu.cpp  StMainMenuToAttackMenu.h  StMainMenuToShop.cpp  StMainMenuToShop.h  StShop.cpp  StShop.h  StWorldMapBootstrap.cpp  StWorldMapBootstrap.h  StWorldMapEnterTargetZone.cpp  StWorldMapEnterTargetZone.h  StWorldMapFocusTargetZone.cpp  StWorldMapFocusTargetZone.h  StWorldMapResolveCurrentZone.cpp  StWorldMapResolveCurrentZone.h  StWorldOceanHandleMeowfficerShop.cpp  StWorldOceanHandleMeowfficerShop.h  StWorldOceanMonitorPlanBattle.cpp  StWorldOceanMonitorPlanBattle.h  StWorldOceanPlanBattleMode.cpp  StWorldOceanPlanBattleMode.h  StWorldOceanRecoverOil.cpp  StWorldOceanRecoverOil.h  StWorldOceanToWorldMap.cpp  StWorldOceanToWorldMap.h  WorldOceanPlanBattleRuntimeContext.h
tasks/steps/: TemplateSteps.cpp  TemplateSteps.h  WorldMapSteps.cpp  WorldMapSteps.h  WorldOceanSteps.cpp  WorldOceanSteps.h
test/: test_tasks.cpp
vision/: TemplateCatalog.cpp  TemplateCatalog.h  TemplateMatcher.cpp  TemplateMatcher.h  VisionEngine.cpp  VisionEngine.h
